--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "skull-dao",
   "private": true,
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,15 +11,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@3rdweb/hooks": "^1.6.0",
+    "@3rdweb/react": "^1.7.0",
+    "@3rdweb/sdk": "^1.27.2",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.2",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "regenerator-runtime": "^0.13.4"
   },
   "devDependencies": {
     "@types/node": "17.0.1",
     "@types/react": "17.0.37",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.2.15",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
 }
